src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-using-impl-items.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-using-impl-items.rs:6:16
   |
LL |     fn foo(x: &mut Vec<&u8>, y: &u8) {
   |                        ---      --- these two types are declared with different lifetimes...
LL |         x.push(y);
   |                ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

